feat:在搜索页接入AI助手

--- a/blog-springboot/pom.xml
+++ b/blog-springboot/pom.xml
@@ -209,6 +209,18 @@
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
         </dependency>
+        <!-- OkHttp (用于 AI 流式请求) -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <!-- OkHttp SSE 支持 -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-sse</artifactId>
+            <version>4.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
