--- a/blog-vue/shoka-admin/.gitignore
+++ b/blog-vue/shoka-admin/.gitignore
@@ -1,25 +1,1 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-admin
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# 已被根目录 .gitignore 覆盖，此文件仅保留项目特有的忽略规则
