--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,92 +1,93 @@
-version: "3"
+# ============================================================
+#  博客一键部署 docker-compose
+#  使用方法：
+#    1. cp .env.example .env  → 填写真实密码/密钥
+#    2. docker-compose up -d --build
+# ============================================================
+version: "3.8"
+
 services:
-  blog-service:
-    build: .
-    image: blog-springboot:latest
-    container_name: blog-springboot
-    restart: always
-    depends_on:
-      - mysql
-      - redis
-      - rabbitmq
-    volumes:
-      - "/usr/local/upload:/usr/local/upload"
-    ports:
-      - "8080:8080"
+  # ============ MySQL ============
   mysql:
-    image: mysql:${MYSQL_VERSION}
-    container_name: mysql
+    image: mysql:${MYSQL_VERSION:-8.0}
+    container_name: blog-mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DB:-blog}
       TZ: Asia/Shanghai
     ports:
-      - "3306:3306"
+      - "${MYSQL_PORT:-3306}:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+      # 首次启动时自动导入 blog.sql
+      - ../blog.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # ============ Redis ============
   redis:
-    image: redis:${REDIS_VERSION}
-    container_name: redis
+    image: redis:${REDIS_VERSION:-7}-alpine
+    container_name: blog-redis
     restart: always
-    command: --requirepass "${REDIS_PASSWORD}"
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
     ports:
-      - "6379:6379"
-  rabbitmq:
-    image: rabbitmq:${RABBITMQ_VERSION}
-    container_name: rabbitmq
-    restart: always
-    environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-  elasticsearch:
-    image: elasticsearch:${ELASTICSEARCH_VERSION}
-    container_name: elasticsearch
-    restart: always
-    environment:
-      discovery.type: "single-node"
-      ES_JAVA_OPTS: "-Xms64m -Xmx128m"
-      http.cors.enabled: "true"
-      http.cors.allow-origin: "*"
-      xpack.security.enabled: "true"
-      ELASTIC_PASSWORD: "${ELASTICSEARCH_PASSWORD}"
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    networks:
-      - es-net
-  kibana:
-    image: kibana:${ELASTICSEARCH_VERSION}
-    container_name: kibana
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
-      - "/usr/local/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml"
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # ============ 后端 Spring Boot ============
+  blog-server:
+    build:
+      context: ..
+      dockerfile: deploy/Dockerfile
+    image: blog-springboot:latest
+    container_name: blog-server
+    restart: always
     depends_on:
-      - elasticsearch
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    env_file:
+      - .env
+    environment:
+      # 覆盖 host 为容器名（Docker 内部网络）
+      MYSQL_HOST: mysql
+      REDIS_HOST: redis
     ports:
-      - "5601:5601"
-    networks:
-      - es-net
-  canal_server:
-    image: canal/canal-server:${CANAL_VERSION}
-    container_name: canal
+      - "8080:8080"
     volumes:
-      - "/usr/local/canal/instance.properties:/home/admin/canal-server/conf/example/instance.properties"
-      - "/usr/local/canal/canal.properties:/home/admin/canal-server/conf/canal.properties"
-    ports:
-      - "11111:11111"
+      - upload-data:/usr/local/upload
+
+  # ============ 前端 Nginx ============
   nginx:
-    image: nginx:${NGINX_VERSION}
-    container_name: nginx
+    build:
+      context: ..
+      dockerfile: deploy/Dockerfile.nginx
+    image: blog-nginx:latest
+    container_name: blog-nginx
     restart: always
-    volumes:
-      - "/usr/local/nginx/nginx.conf:/etc/nginx/nginx.conf"
-      - "/etc/ssl/certs:/etc/ssl/certs"
-      - "/usr/local/vue:/usr/local/vue"
-      - "/usr/local/upload:/usr/local/upload"
-    privileged: true
+    depends_on:
+      - blog-server
     ports:
-      - "443:443"
       - "80:80"
-networks:
-  es-net:
-    driver: bridge
+      - "443:443"
+    volumes:
+      # HTTPS 证书（可选）
+      - /etc/ssl/certs:/etc/ssl/certs:ro
+      - upload-data:/usr/local/upload:ro
+
+volumes:
+  mysql-data:
+  redis-data:
+  upload-data:
