--- a/blog-vue/shoka-admin/package.json
+++ b/blog-vue/shoka-admin/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^9.5.0",
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
+    "diff": "^8.0.3",
     "echarts": "^5.4.1",
     "element-plus": "^2.3.9",
     "image-conversion": "^2.1.1",
@@ -31,6 +32,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/diff": "^7.0.2",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
