--- a/blog-vue/shoka-blog/.env.prod
+++ b/blog-vue/shoka-blog/.env.prod
@@ -1,1 +1,9 @@
-VITE_SERVICE_BASE_URL=http://localhost:8080
+VITE_SERVICE_BASE_URL=/api
+VITE_BASE_URL=/
+VITE_ICON_PREFIX=icon
+VITE_ICON_LOCAL_PREFIX=icon-local
+VITE_DIST_NAME=blog
+VITE_HTTP_PROXY=N
+VITE_VISUALIZER=N
+VITE_COMPRESS=Y
+VITE_COMPRESS_TYPE=gzip
