--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -6,15 +6,18 @@
 
 # -------- MySQL --------
 MYSQL_HOST=localhost
-MYSQL_PORT=3306
+MYSQL_PORT=4000
 MYSQL_DB=blog
 MYSQL_USER=root
 MYSQL_PASSWORD=your_password
 
 # -------- Redis --------
 REDIS_HOST=localhost
-REDIS_PORT=6379
+REDIS_PORT=5000
 REDIS_PASSWORD=
+
+# -------- 后端端口 --------
+SERVER_PORT=8000
 
 # -------- 邮箱 --------
 MAIL_HOST=smtp.qq.com
@@ -22,7 +25,7 @@ MAIL_USERNAME=your_email@qq.com
 MAIL_PASSWORD=your_smtp_auth_code
 
 # -------- 博客地址 --------
-BLOG_URL=http://localhost:1314/
+BLOG_URL=http://212.64.28.65/
 
 # -------- 搜索模式 (mysql / elasticsearch) --------
 SEARCH_MODE=mysql
