--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DB:-blog}
       TZ: Asia/Shanghai
     ports:
-      - "${MYSQL_PORT:-3306}:3306"
+      - "${MYSQL_PORT:-4000}:3306"
     volumes:
       - mysql-data:/var/lib/mysql
       # 首次启动时自动导入 blog.sql
@@ -36,7 +36,7 @@ services:
     restart: always
     command: redis-server --requirepass "${REDIS_PASSWORD}"
     ports:
-      - "${REDIS_PORT:-6379}:6379"
+      - "${REDIS_PORT:-5000}:6379"
     volumes:
       - redis-data:/data
     healthcheck:
@@ -64,8 +64,10 @@ services:
       # 覆盖 host 为容器名（Docker 内部网络）
       MYSQL_HOST: mysql
       REDIS_HOST: redis
+      # 后端服务端口
+      SERVER_PORT: 8000
     ports:
-      - "8080:8080"
+      - "${SERVER_PORT:-8000}:8000"
     volumes:
       - upload-data:/usr/local/upload
 
