--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -29,6 +29,13 @@ http {
         listen 80;
         server_name localhost;
 
+        # 静态资源（表情包等）
+        location /static/ {
+            alias /usr/share/nginx/static/;
+            expires 30d;
+            access_log off;
+        }
+
         # 前台
         location / {
             root  /usr/share/nginx/blog;
@@ -36,11 +43,16 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # 后台管理
-        location /admin {
-            alias /usr/share/nginx/admin;
+        # 后台管理（修复 alias + try_files 问题）
+        location /admin/ {
+            alias /usr/share/nginx/admin/;
             index index.html;
             try_files $uri $uri/ /admin/index.html;
+        }
+        
+        # 后台管理根路径重定向
+        location = /admin {
+            return 301 /admin/;
         }
 
         # API 反向代理到后端
@@ -73,10 +85,14 @@ http {
     #         try_files $uri $uri/ /index.html;
     #     }
     #
-    #     location /admin {
-    #         alias /usr/share/nginx/admin;
+    #     location /admin/ {
+    #         alias /usr/share/nginx/admin/;
     #         index index.html;
     #         try_files $uri $uri/ /admin/index.html;
+    #     }
+    #     
+    #     location = /admin {
+    #         return 301 /admin/;
     #     }
     #
     #     location ^~ /api/ {
