--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -1,47 +1,55 @@
 # ============================================================
-#  本地开发环境变量模板
-#  复制为 .env 并填入真实值：cp .env.example .env
-#  spring-dotenv 会自动加载 .env 文件
+#  Docker 部署环境变量（deploy/.env）
+#  使用方法：cp .env.example .env → 修改下方带 ← 标记的项
+#
+#  注意：HOST 地址使用 Docker 容器名（mysql / redis），
+#        PORT 使用容器内部端口（3306 / 6379），
+#        docker-compose.yml 的 environment 会覆盖 HOST 和 PORT，
+#        所以这里的 HOST/PORT 值实际上是备用默认值。
 # ============================================================
 
 # -------- MySQL --------
-MYSQL_HOST=localhost
-MYSQL_PORT=4000
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
 MYSQL_DB=blog
 MYSQL_USER=root
-MYSQL_PASSWORD=your_password
+MYSQL_PASSWORD=MyBlog@2026         # ← 必改：设置你的 MySQL 密码
 
 # -------- Redis --------
-REDIS_HOST=localhost
-REDIS_PORT=5000
-REDIS_PASSWORD=
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=redis123            # ← 必改：设置你的 Redis 密码
 
 # -------- 后端端口 --------
 SERVER_PORT=8000
 
-# -------- 邮箱 --------
+# -------- 邮箱（评论通知） --------
 MAIL_HOST=smtp.qq.com
-MAIL_USERNAME=your_email@qq.com
-MAIL_PASSWORD=your_smtp_auth_code
+MAIL_USERNAME=                     # ← 选填：你的QQ邮箱，如 123456@qq.com
+MAIL_PASSWORD=                     # ← 选填：QQ邮箱SMTP授权码（不是QQ密码）
 
 # -------- 博客地址 --------
-BLOG_URL=http://212.64.28.65/
+BLOG_URL=http://212.64.28.65/     # ← 必改：改成你的服务器公网 IP
 
 # -------- 搜索模式 (mysql / elasticsearch) --------
 SEARCH_MODE=mysql
 
 # -------- 文件上传 (local / oss / cos) --------
-UPLOAD_STRATEGY=oss
-OSS_URL=https://your-bucket.oss-cn-beijing.aliyuncs.com/
-OSS_ENDPOINT=oss-cn-beijing.aliyuncs.com
-OSS_BUCKET=your-bucket
-OSS_ACCESS_KEY_ID=your_key
-OSS_ACCESS_KEY_SECRET=your_secret
+UPLOAD_STRATEGY=local              # ← 没有 OSS 就用 local，有就改成 oss
+UPLOAD_LOCAL_URL=http://212.64.28.65/api/
+UPLOAD_LOCAL_PATH=/usr/local/upload/
 
-# -------- Elasticsearch --------
+# 阿里云 OSS（UPLOAD_STRATEGY=oss 时填写）
+OSS_URL=
+OSS_ENDPOINT=
+OSS_BUCKET=
+OSS_ACCESS_KEY_ID=
+OSS_ACCESS_KEY_SECRET=
+
+# -------- Elasticsearch（默认关闭，不用管）--------
 ES_ENABLED=false
 
-# -------- 第三方登录（可选）--------
+# -------- 第三方登录（可选，不用可留空）--------
 OAUTH_GITEE_CLIENT_ID=
 OAUTH_GITEE_CLIENT_SECRET=
 OAUTH_GITHUB_CLIENT_ID=
@@ -49,7 +57,7 @@ OAUTH_GITHUB_CLIENT_SECRET=
 OAUTH_QQ_APP_ID=
 OAUTH_QQ_APP_KEY=
 
-# -------- AI（可选）--------
-AI_API_KEY=
+# -------- AI 功能（可选，不用可留空）--------
+AI_API_KEY=                        # ← 选填：DeepSeek API Key
 AI_API_URL=https://api.deepseek.com/chat/completions
 AI_MODEL=deepseek-chat
