--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -14,11 +14,13 @@ MYSQL_PORT=3306
 MYSQL_DB=blog
 MYSQL_USER=root
 MYSQL_PASSWORD=MyBlog@2026         # ← 必改：设置你的 MySQL 密码
+MYSQL_HOST_PORT=4000                #对外暴露的端口
 
 # -------- Redis --------
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=redis123            # ← 必改：设置你的 Redis 密码
+REDIS_HOST_PORT=5000                #外暴露的端口
 
 # -------- 后端端口 --------
 SERVER_PORT=8000
