--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DB:-blog}
       TZ: Asia/Shanghai
     ports:
-      - "${MYSQL_PORT:-4000}:3306"
+      - "${MYSQL_HOST_PORT:-4000}:3306"
     volumes:
       - mysql-data:/var/lib/mysql
       # 首次启动时自动导入 blog.sql（blog.sql 在 deploy/ 目录下）
@@ -36,7 +36,7 @@ services:
     restart: always
     command: redis-server --requirepass "${REDIS_PASSWORD}"
     ports:
-      - "${REDIS_PORT:-5000}:6379"
+      - "${REDIS_HOST_PORT:-5000}:6379"
     volumes:
       - redis-data:/data
     healthcheck:
