--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -67,6 +67,20 @@ http {
             proxy_cache off;
             proxy_read_timeout 300s;
         }
+
+        # WebSocket 聊天室代理
+        location /websocket {
+            proxy_pass http://blog-server:8000/websocket;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
+        }
     }
 
     # ============ HTTPS（可选，取消注释并配置证书）============
