fix:修改后端地址，聊天室表情包渲染bug

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -43,16 +43,11 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # 后台管理（修复 alias + try_files 问题）
-        location /admin/ {
+        # 后台管理
+        location /admin {
             alias /usr/share/nginx/admin/;
             index index.html;
             try_files $uri $uri/ /admin/index.html;
-        }
-        
-        # 后台管理根路径重定向
-        location = /admin {
-            return 301 /admin/;
         }
 
         # API 反向代理到后端
@@ -99,14 +94,10 @@ http {
     #         try_files $uri $uri/ /index.html;
     #     }
     #
-    #     location /admin/ {
+    #     location /admin {
     #         alias /usr/share/nginx/admin/;
     #         index index.html;
     #         try_files $uri $uri/ /admin/index.html;
-    #     }
-    #     
-    #     location = /admin {
-    #         return 301 /admin/;
     #     }
     #
     #     location ^~ /api/ {
