--- a/deploy/Dockerfile.nginx
+++ b/deploy/Dockerfile.nginx
@@ -30,7 +30,12 @@ WORKDIR /build/admin
 COPY blog-vue/shoka-admin/package.json blog-vue/shoka-admin/package-lock.json* ./
 RUN npm install --registry=https://registry.npmmirror.com
 COPY blog-vue/shoka-admin/ .
+# 确保 .env.prod 文件存在，如果没有则创建默认配置
+RUN if [ ! -f .env.prod ]; then \
+        echo "VITE_BASE_URL=/admin" > .env.prod; \
+    fi
 # 跳过类型检查，直接构建（类型错误不影响运行）
+# 使用 production mode，会自动加载 .env.prod
 RUN npm run build:prod
 
 # ---- Nginx 运行阶段 ----
