--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -43,6 +43,13 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        # 后台管理静态资源（JS/CSS/图片等）
+        location /admin/assets/ {
+            alias /usr/share/nginx/admin/assets/;
+            expires 30d;
+            access_log off;
+        }
+
         # 后台管理
         location /admin {
             alias /usr/share/nginx/admin/;
