fix:修复后台资源问题

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -43,14 +43,9 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # 后台管理静态资源（JS/CSS/图片等）
-        location /admin/assets/ {
-            alias /usr/share/nginx/admin/assets/;
-            expires 30d;
-            access_log off;
-        }
-
-        # 后台管理
+        # 后台管理（部署在 /admin 路径下）
+        # Vite 构建时 base: /admin/，生成的资源路径为 /admin/assets/xxx.js
+        # alias 会将 /admin/xxx 映射到 /usr/share/nginx/admin/xxx
         location /admin {
             alias /usr/share/nginx/admin/;
             index index.html;
