feat：新增代办，日历，日记，ai助手功能

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ desktop.ini
 .classpath
 .project
 .settings/
+temp/
 
 # ===================== 后端（Spring Boot + Maven）=====================
 target/
