--- a/blog-vue/shoka-blog/package.json
+++ b/blog-vue/shoka-blog/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
     "marked": "^17.0.1",
+    "md-editor-v3": "^6.3.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^2.4.0",
